--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ streamlit~=1.41.1
 aiohttp~=3.11.11
 python-dotenv~=1.0.1
 matplotlib~=3.10.0
+modin[dask]~=0.32.0
+requests~=2.32.3
+nest-asyncio~=1.6.0
